created a initial layout

--- a/index.html
+++ b/index.html
@@ -1,11 +1,56 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>2016 - Python Nordeste</title>
-    </head>
-    <body>
-        Python Nordeste 2016
-    </body>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0, maximum-scale=1, user-scalable=no">
+	<title>Python Nordeste 2016</title>
+
+	<link rel="shortcut icon" href="img/favicon.png">
+
+	<link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/foundation.css">
+  <link rel="stylesheet" href="css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/animate.css">
+	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="css/app.css">
+
+</head>
+<body>
+	<header>
+		<nav role="navigation">
+		</nav>
+	</header>
+
+	<main>
+		<section id="main">
+			<div class="row text-center">
+				<img src="img/logo.png" class="large-6 medium-10 small-10"> <br>
+
+				<h2>2 A 4 - JUNHO - 2016</h2>
+
+				<br><br>
+
+				<div id="bottom">
+					<a href="#">Assine a pré-inscrição</a> <br>
+
+					<div class="social">
+						<a href="https://fb.me/pythonNordeste"><i class="fa fa-facebook-square"></i></a>
+						<a href="https://github.com/pythonNordeste"><i class="fa fa-github-square"></i></a>
+						<a href="https://twitter.com/PythonNordeste"><i class="fa fa-twitter-square"></i></a>
+					</div>
+				</div>
+			</div>
+		</section>
+	</main>
+
+	<footer>
+
+	</footer>
+
+	<script src="js/vendor/jquery.js"></script>
+  <script src="js/foundation.min.js"></script>
+  <script src="js/owl.min.js"></script>
+  <script src="js/app.js"></script>
+
+</body>
 </html>
