--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<br><br>
 
 				<div id="bottom">
-					<a href="#">Assine a pré-inscrição</a> <br>
+					<a href="https://docs.google.com/forms/d/1XEEurqTJGGl6y4f6muqf0mk-PbhQ667rqKCHsjSdv2A/viewform?c=0&w=1">Assine a pré-inscrição</a> <br>
 
 					<div class="social">
 						<a href="https://fb.me/pythonNordeste"><i class="fa fa-facebook-square"></i></a>
