add iframe de inscrição

--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
                     <li class=active><a href=#section-2>EVENTO</a></li>
                     <li><a href=#section-3>KEYNOTES</a></li>
                     <li><a href=#section-4>LOCAL</a></li>
-                    <li><a href=#section-5>PALESTRE</a></li>
-                    <li><a href=#section-6>PATROCINADORES</a></li>
+                    <li><a href=#section-5>INSCREVA-SE</a></li>
+                    <li><a href=#section-6>PALESTRE</a></li>
+                    <li><a href=#section-7>PATROCINADORES</a></li>
                 </ul>
             </div>
         </div>
@@ -113,7 +114,19 @@
         <div class=container>
             <div class=row>
                 <div class="col-md-10 col-md-push-1">
-                    <h1><span>Submeta sua palestra</span></h1>
+                    <h1><span>Inscreva-se</span></h1>
+                    <p>Faça a sua inscrição atráves do formulário abaixo.</p>
+                    <p>Inscreva-se cedo e aproveite os descontos nos primeiros lotes.</p>
+                    <div style="width:100%; text-align:left;" ><iframe  src="//eventbrite.com.br/tickets-external?eid=24262875915&ref=etckt" frameborder="0" height="306" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a class="powered-by-eb" style="color: #dddddd; text-decoration: none;" target="_blank" href="http://www.eventbrite.com.br/r/etckt">Com tecnologia Eventbrite</a></div></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id=section-6 class="jumbotron pyn-section pd-bt-0">
+        <div class=container>
+            <div class=row>
+                <div class="col-md-10 col-md-push-1">
+                    <h1><span>Palestre</span></h1>
                     <p>Quer palestrar no maior evento de Python da região Nordeste do Brasil? Essa é a sua oportunidade.</p>
                     <p>As palestras da Python Nordeste 2016 serão escolhidas através do <a target="_blank" href="http://speakerfight.com/">Speakerfight</a>, uma arena onde os palestrantes podem lutar entre si e as pessoas escolhem quem ganha, ou seja, o público quem irá decidir se você vai ou não palestrar no evento.</p>
                     <p>Submeta sua palestra no link abaixo o quanto antes para aumentar as suas chances. Aproveite para votar nas outras palestras também.</p>
@@ -122,7 +135,7 @@
             </div>
         </div>
     </div>
-    <div id=section-6 class="jumbotron pyn-section pd-bt-0">
+    <div id=section-7 class="jumbotron pyn-section pd-bt-0">
         <div class=container>
             <div class=row>
                 <div class="col-md-10 col-md-push-1">
