add target blank nos links de patrocinadores

--- a/index.html
+++ b/index.html
@@ -145,17 +145,17 @@
             <br>
             <div class=row>
                 <div class=pyn--ptc-diamond><span class=pyn-bheading--lv2>Patrocínio Diamond</span>
-                    <a href="https://www.caktusgroup.com/"><img class=img-responsive src=images/caktus.png alt="Caktus Group"></a>
-                    <a href="http://www.pi.senac.br/"><img class=img-responsive src=images/senac-logo.png alt="Senac Piauí"></a>
+                    <a target="_blank" href="https://www.caktusgroup.com/"><img class=img-responsive src=images/caktus.png alt="Caktus Group"></a>
+                    <a target="_blank" href="http://www.pi.senac.br/"><img class=img-responsive src=images/senac-logo.png alt="Senac Piauí"></a>
                 </div>
                 <div class=pyn--ptc-platinum><span class=pyn-bheading--lv2>Patrocínio Platinum</span>
-                    <a href="http://www.evolux.net.br/"><img class=img-responsive src=images/evolux.png alt="Evolux Sistemas"></a>
+                    <a target="_blank" href="http://www.evolux.net.br/"><img class=img-responsive src=images/evolux.png alt="Evolux Sistemas"></a>
                 </div>
                 <div class=pyn--ptc-gold><span class=pyn-bheading--lv2>Patrocínio Gold</span>
-                    <a href="http://globo.com"><img class=img-responsive src=images/globo.png style="max-width:200px" alt="Globo.com"></a>
+                    <a target="_blank" href="http://globo.com"><img class=img-responsive src=images/globo.png style="max-width:200px" alt="Globo.com"></a>
                 </div>
                 <div class=pyn--ptc-silver><span class=pyn-bheading--lv2>Patrocínio Silver</span>
-                    <a href="http://www.revsys.com/"><img class=img-responsive src=images/revsys.png alt="Revolution Systems"></a>
+                    <a target="_blank" href="http://www.revsys.com/"><img class=img-responsive src=images/revsys.png alt="Revolution Systems"></a>
                 </div>
             </div>
             <div class="row">
@@ -163,7 +163,7 @@
                     <h1><span>Realização</span></h1>
                 </div>
                 <div class=pyn--ptc-silver>
-                    <a href="https://www.facebook.com/groups/pugpi/"><img class=img-responsive src=images/pug.png alt="Python User Group - Piauí"></a>
+                    <a target="_blank" href="https://www.facebook.com/groups/pugpi/"><img class=img-responsive src=images/pug.png alt="Python User Group - Piauí"></a>
                     <a href="#"><img class=img-responsive src=images/apisol.png style="margin-left:20px" alt="Associação Piauiense de Software Livre"></a>
                 </div>
             </div>
