add target blank no link do speakerfight

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     <p>Quer palestrar no maior evento de Python da região Nordeste do Brasil? Essa é a sua oportunidade.</p>
                     <p>As palestras da Python Nordeste 2016 serão escolhidas através do <a target="_blank" href="http://speakerfight.com/">Speakerfight</a>, uma arena onde os palestrantes podem lutar entre si e as pessoas escolhem quem ganha, ou seja, o público quem irá decidir se você vai ou não palestrar no evento.</p>
                     <p>Submeta sua palestra no link abaixo o quanto antes para aumentar as suas chances. Aproveite para votar nas outras palestras também.</p>
-                    <p><a href="http://speakerfight.com/events/python-nordeste-2016/">http://speakerfight.com/events/python-nordeste-2016/</a></p>
+                    <p><a target="_blank" href="http://speakerfight.com/events/python-nordeste-2016/">http://speakerfight.com/events/python-nordeste-2016/</a></p>
                 </div>
             </div>
         </div>
