--- a/index.html
+++ b/index.html
@@ -149,7 +149,8 @@
                     <a target="_blank" href="http://www.pi.senac.br/"><img class=img-responsive src=images/senac-logo.png alt="Senac Piauí"></a>
                 </div>
                 <div class=pyn--ptc-platinum><span class=pyn-bheading--lv2>Patrocínio Platinum</span>
-                    <a target="_blank" href="http://www.evolux.net.br/"><img class=img-responsive src=images/evolux.png alt="Evolux Sistemas"></a>
+                    <a target="_blank" href="http://www.evolux.net.br/"><img style="width: 250px" class=img-responsive src=images/evolux.png alt="Evolux Sistemas"></a>
+                    <a target="_blank" href="http://www.vinta.com.br/"><img style="width:250px;margin-left:10px" class=img-responsive src=images/vinta.png alt="Vinta Software"></a>
                 </div>
                 <div class=pyn--ptc-gold><span class=pyn-bheading--lv2>Patrocínio Gold</span>
                     <a target="_blank" href="http://globo.com"><img class=img-responsive src=images/globo.png style="max-width:200px" alt="Globo.com"></a>
