--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:400,300,300italic,400italic,700,700italic" rel=stylesheet type=text/css>
     <link href=styles/bootstrap.css rel=stylesheet>
     <link href=styles/main.css rel=stylesheet>
+
+    <!-- OpenGraph -->
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Python Nordeste - 2016, Teresina - PI"/>
+    <meta property="og:url" content="http://2016.pythonnordeste.org"/>
+    <meta property="og:site_name" content="Python Nordeste"/>
+    <meta property="og:description" content="A Python Nordeste é o maior encontro da região nordeste para a comunidade Python, que ocorre anualmente em cidades do nordeste do Brasil..."/>
+    <meta property="og:image" content="images/pyne_fb.png"/>
 </head>
 
 <body>
