Change image URL from relative to absolute

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:url" content="http://2016.pythonnordeste.org"/>
     <meta property="og:site_name" content="Python Nordeste"/>
     <meta property="og:description" content="A Python Nordeste é o maior encontro da região nordeste para a comunidade Python, que ocorre anualmente em cidades do nordeste do Brasil..."/>
-    <meta property="og:image" content="images/pyne_fb.png"/>
+    <meta property="og:image" content="https://raw.githubusercontent.com/pythonNordeste/pyne2016/gh-pages/images/pyne_fb.png"/>
 </head>
 
 <body>
