Updating sponsors positions

--- a/index.html
+++ b/index.html
@@ -154,10 +154,14 @@
             <div class=row>
                 <div class=pyn--ptc-diamond><span class=pyn-bheading--lv2>Patrocínio Diamond</span>
                     <a target="_blank" href="https://www.caktusgroup.com/"><img class=img-responsive src=images/caktus.png alt="Caktus Group"></a>
+                </div>
+                <div class=pyn--ptc-diamond>
                     <a target="_blank" href="http://www.pi.senac.br/"><img class=img-responsive src=images/senac-logo.png alt="Senac Piauí"></a>
                 </div>
                 <div class=pyn--ptc-platinum><span class=pyn-bheading--lv2>Patrocínio Platinum</span>
                     <a target="_blank" href="http://www.evolux.net.br/"><img style="width: 250px" class=img-responsive src=images/evolux.png alt="Evolux Sistemas"></a>
+                </div>
+                <div class=pyn--ptc-platinum>
                     <a target="_blank" href="http://www.vinta.com.br/"><img style="width:250px;margin-left:10px" class=img-responsive src=images/vinta.png alt="Vinta Software"></a>
                 </div>
                 <div class=pyn--ptc-gold><span class=pyn-bheading--lv2>Patrocínio Gold</span>
