add bruno rocha como keynote no lugar do thiago avelino

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </div>
             </div>
             <div class=row>
-                <div class=col-md-3>
+                <div class="col-md-3">
                     <article class=thumbnail><img src=images/mark.jpg class=img-circle alt="Mark Lavin">
                         <div class=caption>
                             <h3>Mark Lavin</h3>
@@ -77,16 +77,16 @@
                         </div>
                     </article>
                 </div>
-                <div class=col-md-3>
-                    <article class=thumbnail><img src=images/avelino.jpg class=img-circle alt="Thiago Avelino">
+                <div class="col-md-3">
+                    <article class=thumbnail><img src=images/bruno.jpeg class=img-circle alt="Bruno Rocha">
                         <div class=caption>
-                            <h3>Thiago Avelino</h3>
-                            <h4>CTO / Filmow</h4>
-                            <p>Além de CTO do <a href="http://filmow.com/" target="_blank">filmow.com</a>, é Ex-Founder do sambaporno.com e Matemático pela USP, especialista desenvolvimento de parsers, atuante na comunidade open source. Com a necessidade de processar grandes volumes de dados o seu foco de pesquisa e desenvolvimento incluem Go, Python, NoSQL, sistemas distribuídos e assíncronos.</p>
+                            <h3>Bruno Rocha</h3>
+                            <h4>Engenheiro de Qualidade de Software / Red Hat</h4>
+                            <p>Bruno Rocha é membro da Python Software Foundation, autor do livro web2py cookbook e de uma série de tutoriais sobre desenvolvimento web com Python e Flask, colaborador de vários projetos opensource entre eles o QuokkaCMS, o Codemod e o Dynaconf. Atualmente é Engenheiro de Qualidade de Software na Red Hat e além disso é um Pythonista herbívoro, ciclista de final de semana e pastor na Igreja do Monstro de Espaguete Voador.</p>
                         </div>
                     </article>
                 </div>
-                <div class=col-md-3>
+                <div class="col-md-3">
                     <article class=thumbnail><img src=images/tarsis.jpg class=img-circle alt="Tarsis Azevedo">
                         <div class=caption>
                             <h3>Tarsis Azevedo</h3>
