Adicionando Ramalho como Keynote, Tw e 128 como patrocinadoras e removendo chamada pra submissão de palestras

--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
                     <li><a href=#section-3>KEYNOTES</a></li>
                     <li><a href=#section-4>LOCAL</a></li>
                     <li><a href=#section-5>INSCREVA-SE</a></li>
-                    <li><a href=#section-6>PALESTRE</a></li>
-                    <li><a href=#section-7>PATROCINADORES</a></li>
+                    <li><a href=#section-6>PATROCINADORES</a></li>
                 </ul>
             </div>
         </div>
@@ -66,7 +65,7 @@
                 </div>
             </div>
             <div class=row>
-                <div class="col-md-3">
+                <div class="col-lg-3">
                     <article class=thumbnail><img src=images/mark.jpg class=img-circle alt="Mark Lavin">
                         <div class=caption>
                             <h3>Mark Lavin</h3>
@@ -77,21 +76,30 @@
                         </div>
                     </article>
                 </div>
-                <div class="col-md-3">
+                <div class="col-lg-3">
                     <article class=thumbnail><img src=images/bruno.jpeg class=img-circle alt="Bruno Rocha">
                         <div class=caption>
                             <h3>Bruno Rocha</h3>
-                            <h4>Engenheiro de Qualidade de Software / Red Hat</h4>
+                            <h4>Engenheiro de Software / Red Hat</h4>
                             <p>Bruno Rocha é membro da Python Software Foundation, autor do livro web2py cookbook e de uma série de tutoriais sobre desenvolvimento web com Python e Flask, colaborador de vários projetos opensource entre eles o QuokkaCMS, o Codemod e o Dynaconf. Atualmente é Engenheiro de Qualidade de Software na Red Hat e além disso é um Pythonista herbívoro, ciclista de final de semana e pastor na Igreja do Monstro de Espaguete Voador.</p>
                         </div>
                     </article>
                 </div>
-                <div class="col-md-3">
+                <div class="col-lg-3">
                     <article class=thumbnail><img src=images/tarsis.jpg class=img-circle alt="Tarsis Azevedo">
                         <div class=caption>
                             <h3>Tarsis Azevedo</h3>
                             <h4>Programador / Globo.com</h4>
                             <p>Tarsis é programador na <a href="http://globo.com" target="_blank">globo.com</a> e trabalha em varios projetos open source, principalmente na area de cloud computing. Começou com python durante a faculdade e foi amor a primeira vista. Hoje trabalha principalmente com Go mas continua apaixonado por python.</p>
+                        </div>
+                    </article>
+                </div>
+                <div class="col-lg-3">
+                    <article class=thumbnail><img src=images/ramalho.jpg class=img-circle alt="Luciano Ramalho">
+                        <div class=caption>
+                            <h3>Luciano Ramalho</h3>
+                            <h4>Consultor Técnico / ThoughtWorks</h4>
+                            <p>Luciano Ramalho é consultor técnico principal na ThoughtWorks. Vem usando Python profissionalmente desde 1998 e escreveu Fluent Python (no Brasil, Python Fluente). É um dos fundadores do Garoa Hacker Clube e acredita que o Brasil tem jeito, se as pessoas estudarem, se organizarem e aceitarem suas diferenças.</p>
                         </div>
                     </article>
                 </div>
@@ -134,19 +142,6 @@
         <div class=container>
             <div class=row>
                 <div class="col-md-10 col-md-push-1">
-                    <h1><span>Palestre</span></h1>
-                    <p>Quer palestrar no maior evento de Python da região Nordeste do Brasil? Essa é a sua oportunidade.</p>
-                    <p>As palestras da Python Nordeste 2016 serão escolhidas através do <a target="_blank" href="http://speakerfight.com/">Speakerfight</a>, uma arena onde os palestrantes podem lutar entre si e as pessoas escolhem quem ganha, ou seja, o público quem irá decidir se você vai ou não palestrar no evento.</p>
-                    <p>Submeta sua palestra no link abaixo o quanto antes para aumentar as suas chances. Aproveite para votar nas outras palestras também.</p>
-                    <p><a target="_blank" href="http://speakerfight.com/events/python-nordeste-2016/">http://speakerfight.com/events/python-nordeste-2016/</a></p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div id=section-7 class="jumbotron pyn-section pd-bt-0">
-        <div class=container>
-            <div class=row>
-                <div class="col-md-10 col-md-push-1">
                     <h1><span>Patrocinadores</span></h1>
                 </div>
             </div>
@@ -164,8 +159,14 @@
                 <div class=pyn--ptc-platinum>
                     <a target="_blank" href="http://www.vinta.com.br/"><img style="width:250px;margin-left:10px" class=img-responsive src=images/vinta.png alt="Vinta Software"></a>
                 </div>
+                <div class=pyn--ptc-platinum>
+                    <a target="_blank" href="https://www.thoughtworks.com/pt/"><img style="width: 250px" class=img-responsive src=images/thoughtworks.png alt="ThoughtWorks"></a>
+                </div>
                 <div class=pyn--ptc-gold><span class=pyn-bheading--lv2>Patrocínio Gold</span>
                     <a target="_blank" href="http://globo.com"><img class=img-responsive src=images/globo.png style="max-width:200px" alt="Globo.com"></a>
+                </div>
+                <div class=pyn--ptc-gold>
+                    <a target="_blank" href="http://128bits.cc/"><img class=img-responsive src=images/128.png style="max-width:200px" alt="128Bits"></a>
                 </div>
                 <div class=pyn--ptc-silver><span class=pyn-bheading--lv2>Patrocínio Silver</span>
                     <a target="_blank" href="http://www.revsys.com/"><img class=img-responsive src=images/revsys.png alt="Revolution Systems"></a>
