adicionando programação do evento

--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:400,300,300italic,400italic,700,700italic" rel=stylesheet type=text/css>
     <link href=styles/bootstrap.css rel=stylesheet>
     <link href=styles/main.css rel=stylesheet>
-
     <!-- OpenGraph -->
-    <meta property="og:type" content="website"/>
-    <meta property="og:title" content="Python Nordeste - 2016, Teresina - PI"/>
-    <meta property="og:url" content="http://2016.pythonnordeste.org"/>
-    <meta property="og:site_name" content="Python Nordeste"/>
-    <meta property="og:description" content="A Python Nordeste é o maior encontro da região nordeste para a comunidade Python, que ocorre anualmente em cidades do nordeste do Brasil..."/>
-    <meta property="og:image" content="https://raw.githubusercontent.com/pythonNordeste/pyne2016/gh-pages/images/pyne_fb.png"/>
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Python Nordeste - 2016, Teresina - PI" />
+    <meta property="og:url" content="http://2016.pythonnordeste.org" />
+    <meta property="og:site_name" content="Python Nordeste" />
+    <meta property="og:description" content="A Python Nordeste é o maior encontro da região nordeste para a comunidade Python, que ocorre anualmente em cidades do nordeste do Brasil..." />
+    <meta property="og:image" content="https://raw.githubusercontent.com/pythonNordeste/pyne2016/gh-pages/images/pyne_fb.png" />
 </head>
 
 <body>
@@ -70,9 +69,7 @@
                         <div class=caption>
                             <h3>Mark Lavin</h3>
                             <h4>Diretor Técnico / Caktus Group</h4>
-                            <p>Mark Lavin é co-autor do livro "Lightweight Django" da editora O'Reilly (no Brasil, "Django Essencial", da editora Novatec) e gravou uma série vídeos chamada "Intermediate Django" que foca em serviços RESTful e integração com aplicações client-side.
-                            Você também pode encontrá-lo frequentemente contribuindo com o projeto Django ou respondendo questões no StackOverflow.
-                            Ele também aprecia fabricação artesanal de cervejas, triatlos Ironman, e passar tempo com sua esposa e suas duas jovens filhas.</p>
+                            <p>Mark Lavin é co-autor do livro "Lightweight Django" da editora O'Reilly (no Brasil, "Django Essencial", da editora Novatec) e gravou uma série vídeos chamada "Intermediate Django" que foca em serviços RESTful e integração com aplicações client-side. Você também pode encontrá-lo frequentemente contribuindo com o projeto Django ou respondendo questões no StackOverflow. Ele também aprecia fabricação artesanal de cervejas, triatlos Ironman, e passar tempo com sua esposa e suas duas jovens filhas.</p>
                         </div>
                     </article>
                 </div>
@@ -133,7 +130,87 @@
                     <h1><span>Inscreva-se</span></h1>
                     <p>Faça a sua inscrição atráves do formulário abaixo.</p>
                     <p>Inscreva-se cedo e aproveite os descontos nos primeiros lotes.</p>
-                    <div style="width:100%; text-align:left;" ><iframe  src="//eventbrite.com.br/tickets-external?eid=24262875915&ref=etckt" frameborder="0" height="306" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a class="powered-by-eb" style="color: #dddddd; text-decoration: none;" target="_blank" href="http://www.eventbrite.com.br/r/etckt">Com tecnologia Eventbrite</a></div></div>
+                    <div style="width:100%; text-align:left;">
+                        <iframe src="//eventbrite.com.br/tickets-external?eid=24262875915&ref=etckt" frameborder="0" height="306" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe>
+                        <div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;"><a class="powered-by-eb" style="color: #dddddd; text-decoration: none;" target="_blank" href="http://www.eventbrite.com.br/r/etckt">Com tecnologia Eventbrite</a></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id=section-5 class="jumbotron pyn-section pd-bt-0">
+        <div class=container>
+            <div class=row>
+                <div class="col-md-10 col-md-push-1">
+                    <h1><span>Programação</span></h1>
+                </div>
+            </div>
+            <div class=row>
+                <div class=col-md-6>
+                    <h3 class=pyn-schedule>Dia 10/05</h3>
+                    <dl>
+                        <dt>8:00</dt>
+                        <dd>Credenciamento</dd>
+                        <dt>9:00</dt>
+                        <dd><a href="#fakelink">Tarsis Azevedo</a></dd>
+                        <dt>10:00</dt>
+                        <dd>Shell Script: o que é, para que serve e como Python pode ajudar? - Lucas Inojosa</dd>
+                        <dt>10:30</dt>
+                        <dd>Coffee Break</dd>
+                        <dt>11:00</dt>
+                        <dd>Aplicando DDD de forma incremental em um projeto Django no mundo real - Igor Medeiros</dd>
+                        <dt>11:30</dt>
+                        <dd>Python e Criptografia - Dann Luciano</dd>
+                        <dt>12:00</dt>
+                        <dd>Almoço</dd>
+                        <dt>14:00</dt>
+                        <dd><a href=#fakelink>Mark Lavin</a></dd>
+                        <dt>15:00</dt>
+                        <dd>Programação Funcional em Python, de forma simples - Anderson Resende</dd>
+                        <dt>15:30</dt>
+                        <dd>Abrindo sua mente com Open Source - Patrick Mazulo</dd>
+                        <dt>16:00</dt>
+                        <dd>Coffee Break</dd>
+                        <dt>16:30</dt>
+                        <dd>Django Views: Boas práticas - Renato Oliveira</dd>
+                        <dt>17:00</dt>
+                        <dd>APIs: o que são, onde vivem, do que se alimentam? - Filipe Ximenes</dd>
+                        <dt>17:30</dt>
+                        <dd>Lightning Talks</dd>
+                    </dl>
+                </div>
+                <div class=col-md-6>
+                    <h3 class=pyn-schedule>Dia 11/05</h3>
+                    <dl>
+                        <dt>9:00</dt>
+                        <dd><a href=#fakelink>Luciano Ramalho</a></dd>
+                        <dt>10:00</dt>
+                        <dd>Ensinando Ciência da Computação com Python - Marcos Castro</dd>
+                        <dt>10:30</dt>
+                        <dd>Coffee Break</dd>
+                        <dt>11:00</dt>
+                        <dd>Ataque às fronteiras - isolando e testando suas integrações externas - Bernardo Fontes</dd>
+                        <dt>11:30</dt>
+                        <dd>Kivy - Criando aplicações multiplataforma (e mobile) com Python - Julio Cesar Eiras</dd>
+                        <dt>12:00</dt>
+                        <dd>Almoço</dd>
+                        <dt>14:00</dt>
+                        <dd><a href="#fakelink">Bruno Rocha</a></dd>
+                        <dt>15:00</dt>
+                        <dd>Surfando com Python nas ondas da Internet - Elinaldo Monteiro</dd>
+                        <dt>15:30</dt>
+                        <dd>Não é bem assim... quando Python não é como você espera - Flávio Juvenal</dd>
+                        <dt>16:00</dt>
+                        <dd>Foto Oficial</dd>
+                        <dt>16:30</dt>
+                        <dd>Coffee Break</dd>
+                        <dt>17:00</dt>
+                        <dd>Django e React.js - André Ericson</dd>
+                        <dt>17:30</dt>
+                        <dd>Lightning Talks</dd>
+                        <dt>18:00</dt>
+                        <dd>Encerramento</dd>
+                    </dl>
                 </div>
             </div>
         </div>
