add link da programação no header

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
                     <li><a href=#section-3>KEYNOTES</a></li>
                     <li><a href=#section-4>LOCAL</a></li>
                     <li><a href=#section-5>INSCREVA-SE</a></li>
-                    <li><a href=#section-6>PATROCINADORES</a></li>
+                    <li><a href=#section-6>PROGRAMAÇÃO</a></li>
+                    <li><a href=#section-7>PATROCINADORES</a></li>
                 </ul>
             </div>
         </div>
@@ -138,7 +139,7 @@
             </div>
         </div>
     </div>
-    <div id=section-5 class="jumbotron pyn-section pd-bt-0">
+    <div id=section-6 class="jumbotron pyn-section pd-bt-0">
         <div class=container>
             <div class=row>
                 <div class="col-md-10 col-md-push-1">
@@ -215,7 +216,7 @@
             </div>
         </div>
     </div>
-    <div id=section-6 class="jumbotron pyn-section pd-bt-0">
+    <div id=section-7 class="jumbotron pyn-section pd-bt-0">
         <div class=container>
             <div class=row>
                 <div class="col-md-10 col-md-push-1">
