--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
                 <ul id=pyn-nav class="nav navbar-nav navbar-right">
                     <li class=active><a href=#section-2>EVENTO</a></li>
                     <li><a href=#section-3>KEYNOTES</a></li>
-                    <li><a href=#section-4>LOCAL</a></li>
-                    <li><a href=#section-5>INSCREVA-SE</a></li>
-                    <li><a href=#section-6>PROGRAMAÇÃO</a></li>
-                    <li><a href=#section-7>PATROCINADORES</a></li>
+                    <li><a href=#section-4>TUTORIAIS</a></li>
+                    <li><a href=#section-5>LOCAL</a></li>
+                    <li><a href=#section-6>INSCREVA-SE</a></li>
+                    <li><a href=#section-7>PROGRAMAÇÃO</a></li>
+                    <li><a href=#section-8>PATROCINADORES</a></li>
                 </ul>
             </div>
         </div>
@@ -104,7 +105,45 @@
             </div>
         </div>
     </div>
-    <div id=section-4 class="jumbotron pyn-section pd-bt-0">
+    <div id=section-4 class="jumbotron pyn-section">
+        <div class=container>
+            <div class=row>
+                <div class="col-md-10 col-md-push-1">
+                    <h1><span>Tutoriais</span></h1>
+                </div>
+            </div>
+            <div class=row>
+                <div class="col-lg-3">
+                    <article class=thumbnail>
+                        <img src=images/gileno.jpg class=img-circle alt="Gileno Filho">
+                    </article>
+                </div>
+                <div class="col-lg-9">
+                    <article class="thumbnail tutorial">
+                        <h3>Introdução à Ciência de Dados com Python - Gileno Filho</h3>
+                        <p>Neste tutorial irei explorar a área científica de Python, através de suas principais bibliotecas (pandas, scipy, matplotlib, sklearn...), resolvendo problemas reais que podem ser solucionados através da análise de dados utilizando "statistical learning" e "machine learning". Iremos passar por todo o pipeline associado a ciência de dados: captura, limpeza, análise exploratória, escolha do modelo, extração de resultados e finalmente visualização (comunicação dos resultados).</p>
+                    </article>
+                </div>
+            </div>
+            <div class=row>
+                <div class="col-lg-3">
+                    <article class=thumbnail>
+                        <img src=images/ramalho.jpg class=img-circle alt="Luciano Ramalho">
+                    </article>
+                </div>
+                <div class="col-lg-9">
+                    <article class="thumbnail tutorial">
+                        <h3>Objetos Pythonicos: APIs produtivas com o Data Model - Luciano Ramalho</h3>
+                        <p>Este tutorial irá mostrar como implementar objetos que se comportam "naturalmente" como tipos built-in, e então merecem ser chamados de Pythonicos. A apresentação inteira e exercícios serão guiados por doctests, que suportam uma forma de BDD (behavior-driver design) e permite aos participantes verificar o seu progresso nas partes práticas do tutorial.</p>
+                        <p>Uma API é considerada Pythonica quando suporta idiomas Python adequados e convenientes. Por exemplo, programadores Python experam que qualquer coleção seja iteravel e suporte a função len(). Coleções vazias devem avaliar "falsy" em contextos boleanos. Objetos de qualquer tipo devem possuir uma representação de string amigável ao usuário e outro formato de exibição que não esconda detalhes e seja útil para depuração. Objetos de diversos tipos suportam operadores como + e * quanto fazem sentido. Objetos pythonicos são uma das chaves para a alta produtividade de um programador com a linguagem.</p>
+
+                        <p>Todos esses recursos de objetos, e mais, são definidos no Python Data Model: a API que aplica a objetos Python em geral, desde inteiros planos a coleções e até funções e classes -- quando tratamos estes como objetos de primeira classe na linguagem. Os mais importante métodos especiais definidos no Data Model serão mostrados e exercitados neste tutorial.</p>
+                    </article>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id=section-5 class="jumbotron pyn-section pd-bt-0">
         <div class=container>
             <div class=row>
                 <div class="col-md-10 col-md-push-1">
@@ -124,7 +163,7 @@
             </div>
         </div>
     </div>
-    <div id=section-5 class="jumbotron pyn-section pd-bt-0">
+    <div id=section-6 class="jumbotron pyn-section pd-bt-0">
         <div class=container>
             <div class=row>
                 <div class="col-md-10 col-md-push-1">
@@ -139,7 +178,7 @@
             </div>
         </div>
     </div>
-    <div id=section-6 class="jumbotron pyn-section pd-bt-0">
+    <div id=section-7 class="jumbotron pyn-section pd-bt-0">
         <div class=container>
             <div class=row>
                 <div class="col-md-10 col-md-push-1">
@@ -147,7 +186,16 @@
                 </div>
             </div>
             <div class=row>
-                <div class=col-md-6>
+                <div class=col-md-4>
+                    <h3 class=pyn-schedule>Dia 09/06</h3>
+                    <dl>
+                        <dt>8:00</dt>
+                        <dd>Tutorial - Objetos Pythonicos: APIs produtivas com o Data Model</dd>
+                        <dt>8:00</dt>
+                        <dd>Tutorial - Introdução à Ciência de Dados com Python</dd>
+                    </dl>
+                </div>
+                <div class=col-md-4>
                     <h3 class=pyn-schedule>Dia 10/06</h3>
                     <dl>
                         <dt>8:00</dt>
@@ -180,7 +228,7 @@
                         <dd>Lightning Talks</dd>
                     </dl>
                 </div>
-                <div class=col-md-6>
+                <div class=col-md-4>
                     <h3 class=pyn-schedule>Dia 11/06</h3>
                     <dl>
                         <dt>9:00</dt>
