adicionando data na descrição dos tutoriais

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <div class=row>
                 <div class="col-md-10 col-md-push-1">
                     <h1><span>Tutoriais</span></h1>
-                    <h4>Os tutoriais acontecerão simultaneamente das 8h às 12h e das 14h às 18h, portanto só é possível fazer a inscrição em um tutorial.</h4>
+                    <h4>Os tutoriais acontecerão simultaneamente das 8h às 12h e das 14h às 18h do dia 09/06, portanto só é possível fazer a inscrição em um tutorial.</h4>
                 </div>
             </div>
             <div class=row>
