removendo padding na seção de tutoriais

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </div>
         </div>
     </div>
-    <div id=section-4 class="jumbotron pyn-section">
+    <div id=section-4 class="jumbotron pyn-section tutorial-row">
         <div class=container>
             <div class=row>
                 <div class="col-md-10 col-md-push-1">
@@ -265,7 +265,7 @@
             </div>
         </div>
     </div>
-    <div id=section-7 class="jumbotron pyn-section pd-bt-0">
+    <div id=section-8 class="jumbotron pyn-section pd-bt-0">
         <div class=container>
             <div class=row>
                 <div class="col-md-10 col-md-push-1">
