mudando Marcos Castro por Anderson Lima na programação do evento

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                         <dt>9:00</dt>
                         <dd><a href=#fakelink>Luciano Ramalho</a></dd>
                         <dt>10:00</dt>
-                        <dd>Ensinando Ciência da Computação com Python - Marcos Castro</dd>
+                        <dd>Ensinando Ciência da Computação com Python - Anderson Lima</dd>
                         <dt>10:30</dt>
                         <dd>Coffee Break</dd>
                         <dt>11:00</dt>
